# terminals

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docker-build.yaml  docker-build.yml
manifests/: terminal-crd.yaml
operator/: Dockerfile  handler.py
terminals/: cli.py  config.py  logging.py  main.py
terminals/backends/: base.py  docker.py  kubernetes.py  kubernetes_operator.py
terminals/db/: session.py
terminals/migrations/: env.py
terminals/routers/: auth.py  proxy.py
